[package]
name = "solana-zero-capital-beast"
version = "1.0.0"
edition = "2021"

[dependencies]
solana-sdk = "2.1"
solana-client = "2.1"
solana-program = "2.1"
anchor-lang = { version = "0.30", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
bytemuck = "1.18"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
jito-protos = { git = "https://github.com/jito-labs/jito-protos", rev = "main" }