[package]
name = "solana-zero-capital-beast"
version = "1.0.0"
edition = "2021"

[dependencies]
solana-sdk = "2.1"
solana-client = "2.1"
solana-account-decoder = "2.1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
tracing = "0.1"
tracing-subscriber = "0.3"
borsh = { version = "1.5", features = ["derive"] }
bs58 = "0.5"
base64 = "0.22"
thiserror = "1.0"
uuid = { version = "1.10", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
